# WebBackend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: api.md  products.py  sales.py  users.py
app/database/: database.md  session.py
app/models/: init.py  models.md  product.py  products.py  sale.py  sales.py  user.py
app/schemas/: product.py  products.py  sale.py  schemas.md  user.py
app/scripts/: create_db.py
app/services/: product_service.py
pythonBackend/: dependencies.py  main.py  models.py  pyproject.toml
pythonBackend/middleware/: rateLimiter.py
pythonBackend/routers/: advance.py  params.py  security.py
